<resources>
    <string name="app_name">Menu</string>
    <string name="font_10">10 号字体</string>
    <string name="font_12">12 号字体</string>
    <string name="font_14">14 号字体</string>
    <string name="font_16">16 号字体</string>
    <string name="font_18">18 号字体</string>

    <string name="red_font">红色字体</string>
    <string name="green_font">绿色字体</string>
    <string name="blue_font">蓝色字体</string>

    <string name="font_size">字号大小</string>
    <string name="font_color">字体颜色</string>
    <string name="plain_item">纯文本菜单</string>

    <string name="bg_title">请选择背景颜色</string>

</resources>
