<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/font_size">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/font_10" android:title="@string/font_10" />
                <item android:id="@+id/font_12" android:title="@string/font_12" />
                <item android:id="@+id/font_14" android:title="@string/font_14" />
                <item android:id="@+id/font_16" android:title="@string/font_16" />
                <item android:id="@+id/font_18" android:title="@string/font_18" />
            </group>
        </menu>
    </item>

    <item android:id="@+id/plain_item" android:title="@string/plain_item"></item>

    <item android:title="@string/font_color">
        <menu>
            <group>
                <item android:id="@+id/red_font" android:title="@string/red_font"/>
                <item android:id="@+id/green_font" android:title="@string/green_font"/>
                <item android:id="@+id/blue_font" android:title="@string/blue_font"/>
            </group>
        </menu>
    </item>
</menu>